--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@ form input {
 }
 
 .label {
-    margin-top: 1.5em;
+    margin: 1.5em 0 0 -1em;
     background-color: #4A4A4D;
     color: #F2EDDB;
     width: 80%;
@@ -97,24 +97,24 @@ form input {
     margin: 0;
 }
 
-.itemrow ul > li {
-    display: inline-block;
-}
-
 .itemrow {
     margin-bottom: .5em;
 }
 
-.item input {
-    width: 14em;
+.itemrow input {
     background-color: #F2EDDB;
 }
 
+.itemrow .item {
+    margin-left: 1em;
+    width: 14em;
+}
+
 @media screen and (min-width: 400px) {
-    .item input {
+    .itemrow .item {
         width: 17em;
     }
     .label {
-        margin-left: -3em;
+        margin-left: -4em;
     }
 }
