--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ img[alt=logo] {
 }
 
 .tagline {
-    color: #333;
+    color: #35373A;
     width: 172px;
 }
 
@@ -113,20 +113,25 @@ form input {
     filter: none;
 }
 
+.itemrow .fa {
+    color: #35373A;
+    cursor: pointer;
+    font-size: 1.4em;
+    vertical-align: middle;
+}
+
+.fa:hover {
+    font-size: 1.45em;
+    text-shadow: 1px 1px 1px #F2EDDB;
+}
+
+.fa:active {
+    color: #BF6E33;
+}
+
 .itemrow .item.checked {
-    filter: hue-rotate(120deg);
     -webkit-filter: hue-rotate(120deg);
-}
-
-.purchased .item {
-    margin-left: .45em;
-}
-
-.itemrow input[type=image] {
-    width: 1.75em;
-    height: 1.75em;
-    margin-left: -.6em;
-    vertical-align: top;
+    filter: hue-rotate(120deg);
 }
 
 .add {
